--- a/startbootstrap-full-width-pics-gh-pages/css copy/css copy/styles.css
+++ b/startbootstrap-full-width-pics-gh-pages/css copy/css copy/styles.css
@@ -8,7 +8,7 @@ body{
 }
 img{
     display:block; /*each image is it's own line/block*/
-    border: 2px dashed white !important; 
+    border: 2px dashed white;
     padding:15px;
     margin: auto;
 }
@@ -19,7 +19,7 @@ a:visited{
     color:aliceblue
 }
 li{
-    font-style:normal;
+    font-style:italic;
 }
 li:hover{
     font: size 105%;
@@ -67,12 +67,4 @@ li:hover{
 .gallery img{
     display: inline; 
     width: 19%;
-}
-.heading{
-   color: aliceblue; 
-   font-family: 'Courier New', Courier, monospace;
-}
-.subheading{
-    color: aliceblue;
-    font-family: 'Courier New', Courier, monospace;
 }
